fix: VCS connections fixed and AI detail setting added